--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="problem1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="problem2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="problem3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
