--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="problem3.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="problem31.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
