--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="problem523.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="problem41.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
