--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="problem1.cpp" />
+    <ClCompile Include="problem164.cpp" />
     <ClCompile Include="problem2.cpp" />
     <ClCompile Include="problem202.cpp" />
     <ClCompile Include="problem3.cpp" />
