--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="problem1.cpp" />
     <ClCompile Include="problem164.cpp" />
+    <ClCompile Include="problem174.cpp" />
     <ClCompile Include="problem2.cpp" />
     <ClCompile Include="problem202.cpp" />
     <ClCompile Include="problem3.cpp" />
