--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="problem164.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="problem174.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
